--- a/225_Implement_Stack_using_Queues.ipynb
+++ b/225_Implement_Stack_using_Queues.ipynb
@@ -8,11 +8,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 後進先出"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MyStack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.queue = []\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        self.queue.append(x)\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        return self.queue.pop()\n",
+    "\n",
+    "    def top(self) -> int:\n",
+    "        return self.queue[-1]\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        return not self.queue\n",
+    "        \n",
+    "\n",
+    "\n",
+    "# Your MyStack object will be instantiated and called as such:\n",
+    "# obj = MyStack()\n",
+    "# obj.push(x)\n",
+    "# param_2 = obj.pop()\n",
+    "# param_3 = obj.top()\n",
+    "# param_4 = obj.empty()"
+   ]
   }
  ],
  "metadata": {
