--- a/232_Implement_Queue_using_Stacks.ipynb
+++ b/232_Implement_Queue_using_Stacks.ipynb
@@ -8,11 +8,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://ithelp.ithome.com.tw/articles/10268057"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 先進先出"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MyQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.stack1 = []\n",
+    "        self.stack2 = []\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        while self.stack2:\n",
+    "            self.stack1.append(self.stack2.pop())\n",
+    "        self.stack1.append(x)\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        while self.stack1:\n",
+    "            self.stack2.append(self.stack1.pop())\n",
+    "        return self.stack2.pop()\n",
+    "\n",
+    "    def peek(self) -> int: # 取出最早的元素\n",
+    "        return self.stack1[0] if self.stack1 else self.stack2[-1]\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        return (not self.stack1) and (not self.stack2)\n",
+    "\n",
+    "\n",
+    "# Your MyQueue object will be instantiated and called as such:\n",
+    "# obj = MyQueue()\n",
+    "# obj.push(x)\n",
+    "# param_2 = obj.pop()\n",
+    "# param_3 = obj.peek()\n",
+    "# param_4 = obj.empty()"
+   ]
   }
  ],
  "metadata": {
