--- a/347_Top_K_Frequent_Elements.ipynb
+++ b/347_Top_K_Frequent_Elements.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 973. K Closest Points to Origin"
+    "## 347. Top K Frequent Elements"
    ]
   },
   {
@@ -16,18 +16,23 @@
     "import heapq\n",
     "\n",
     "class Solution:\n",
-    "    def kClosest(self, points, k):\n",
-    "        heap = []\n",
-    "        for x, y in points:\n",
-    "            d = - (x ** 2 + y ** 2)\n",
-    "            if len(heap) < k:\n",
-    "                heapq.heappush(heap, [d, [x, y]])\n",
+    "    def topKFrequent(self, nums, k):\n",
+    "        dic = {}\n",
+    "        for i in nums:\n",
+    "            if i in dic:\n",
+    "                dic[i] += 1\n",
     "            else:\n",
-    "                heapq.heappushpop(heap, [d, [x, y]])\n",
-    "                \n",
-    "            print(heap)\n",
+    "                dic[i] = 1\n",
     "\n",
-    "        return [d[1] for d in heap]"
+    "        heap = []\n",
+    "        for num, count in dic.items():\n",
+    "            if len(heap) < k:\n",
+    "                heapq.heappush(heap, [count, num])\n",
+    "            else:\n",
+    "                heapq.heappushpop(heap, [count, num])\n",
+    "            # print(heap)\n",
+    "\n",
+    "        return [num for count, num in heap]"
    ]
   },
   {
@@ -36,19 +41,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-18, [3, 3]]]\n",
-      "[[-32, [4, 4]], [-18, [3, 3]]]\n",
-      "[[-26, [5, -1]], [-18, [3, 3]]]\n",
-      "[[-20, [-2, 4]], [-18, [3, 3]]]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[[-2, 4], [3, 3]]"
+       "[2, 1]"
       ]
      },
      "execution_count": 2,
@@ -57,16 +52,9 @@
     }
    ],
    "source": [
-    "points = [[3,3], [4,4], [5,-1], [-2,4]]; k = 2\n",
-    "Solution().kClosest(points, k)"
+    "nums = [1,1,1,2,2,3]; k = 2\n",
+    "Solution().topKFrequent(nums, k)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -85,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
