--- a/91. Decode Ways.ipynb
+++ b/91. Decode Ways.ipynb
@@ -9,14 +9,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def numDecodings(self, s: str) -> int:\n",
+    "        dp = [0] * (len(s) + 1)\n",
+    "        dp[0] = 1\n",
+    "        for i in range(1, len(dp)):\n",
+    "            print(f\"<< i = {i}, s[{i-1}] = {s[i-1]} >>\")\n",
+    "            if int(s[i-1]) != 0:\n",
+    "                dp[i] = dp[i-1]\n",
+    "                print(f\"s[{i-1}] = {s[i-1]} -> ({s[i-1]} != 0)\")\n",
+    "                print(f\"1: {dp}\", \"\\n\")\n",
+    "\n",
+    "            if (i != 1) and ('10' <= s[i-2:i] < '26'):\n",
+    "                dp[i] += dp[i-2]\n",
+    "                print(f\"s[{i-2}:{i}] = {s[i-2:i]} -> (09 < {s[i-2:i]} < 27)\")\n",
+    "                print(f\"2: {dp}\", \"\\n\")\n",
+    "            \n",
+    "            print(f\"new: {dp}\", \"\\n\")\n",
+    "\n",
+    "        return dp[-1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,45 +45,45 @@
      "text": [
       "<< i = 1, s[0] = 2 >>\n",
       "s[0] = 2 -> (2 != 0)\n",
-      "[1, 1, 0, 0, 0, 0] \n",
+      "1: [1, 1, 0, 0, 0, 0] \n",
       "\n",
-      "[1, 1, 0, 0, 0, 0] \n",
+      "new: [1, 1, 0, 0, 0, 0] \n",
       "\n",
       "<< i = 2, s[1] = 2 >>\n",
       "s[1] = 2 -> (2 != 0)\n",
-      "[1, 1, 1, 0, 0, 0] \n",
+      "1: [1, 1, 1, 0, 0, 0] \n",
       "\n",
       "s[0:2] = 22 -> (09 < 22 < 27)\n",
-      "[1, 1, 2, 0, 0, 0] \n",
+      "2: [1, 1, 2, 0, 0, 0] \n",
       "\n",
-      "[1, 1, 2, 0, 0, 0] \n",
+      "new: [1, 1, 2, 0, 0, 0] \n",
       "\n",
       "<< i = 3, s[2] = 2 >>\n",
       "s[2] = 2 -> (2 != 0)\n",
-      "[1, 1, 2, 2, 0, 0] \n",
+      "1: [1, 1, 2, 2, 0, 0] \n",
       "\n",
       "s[1:3] = 22 -> (09 < 22 < 27)\n",
-      "[1, 1, 2, 3, 0, 0] \n",
+      "2: [1, 1, 2, 3, 0, 0] \n",
       "\n",
-      "[1, 1, 2, 3, 0, 0] \n",
+      "new: [1, 1, 2, 3, 0, 0] \n",
       "\n",
       "<< i = 4, s[3] = 1 >>\n",
       "s[3] = 1 -> (1 != 0)\n",
-      "[1, 1, 2, 3, 3, 0] \n",
+      "1: [1, 1, 2, 3, 3, 0] \n",
       "\n",
       "s[2:4] = 21 -> (09 < 21 < 27)\n",
-      "[1, 1, 2, 3, 5, 0] \n",
+      "2: [1, 1, 2, 3, 5, 0] \n",
       "\n",
-      "[1, 1, 2, 3, 5, 0] \n",
+      "new: [1, 1, 2, 3, 5, 0] \n",
       "\n",
       "<< i = 5, s[4] = 6 >>\n",
       "s[4] = 6 -> (6 != 0)\n",
-      "[1, 1, 2, 3, 5, 5] \n",
+      "1: [1, 1, 2, 3, 5, 5] \n",
       "\n",
       "s[3:5] = 16 -> (09 < 16 < 27)\n",
-      "[1, 1, 2, 3, 5, 8] \n",
+      "2: [1, 1, 2, 3, 5, 8] \n",
       "\n",
-      "[1, 1, 2, 3, 5, 8] \n",
+      "new: [1, 1, 2, 3, 5, 8] \n",
       "\n"
      ]
     },
@@ -73,38 +93,15 @@
        "8"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s = \"22216\"\n",
-    "dp = [0] * (len(s) + 1)\n",
-    "dp[0] = 1\n",
-    "for i in range(1, len(dp)):\n",
-    "    print(f\"<< i = {i}, s[{i-1}] = {s[i-1]} >>\")\n",
-    "    if int(s[i-1]) != 0:\n",
-    "        dp[i] = dp[i-1]\n",
-    "        print(f\"s[{i-1}] = {s[i-1]} -> ({s[i-1]} != 0)\")\n",
-    "        print(dp, \"\\n\")\n",
-    "\n",
-    "    if i != 1 and '09' < s[i-2:i] < '27':\n",
-    "        dp[i] += dp[i-2]\n",
-    "        print(f\"s[{i-2}:{i}] = {s[i-2:i]} -> (09 < {s[i-2:i]} < 27)\")\n",
-    "        print(dp, \"\\n\")\n",
-    "    \n",
-    "    print(dp, \"\\n\")\n",
-    "\n",
-    "dp[-1]"
+    "Solution().numDecodings(s)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
