--- a/69. Sqrt(x).ipynb
+++ b/69. Sqrt(x).ipynb
@@ -50,6 +50,31 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "origin: left = 0, mid = 18, right = 37\n",
+      "(square = 324) > (x = 36)\n",
+      "new: left = 0, mid = 18, right = 18\n",
+      "\n",
+      "origin: left = 0, mid = 9, right = 18\n",
+      "(square = 81) > (x = 36)\n",
+      "new: left = 0, mid = 9, right = 9\n",
+      "\n",
+      "origin: left = 0, mid = 4, right = 9\n",
+      "(square = 16) < (x = 36)\n",
+      "new: left = 5, mid = 4, right = 9\n",
+      "\n",
+      "origin: left = 5, mid = 7, right = 9\n",
+      "(square = 49) > (x = 36)\n",
+      "new: left = 5, mid = 7, right = 7\n",
+      "\n",
+      "origin: left = 5, mid = 6, right = 7\n",
+      "(square = 36) ==  (x = 36)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "6"
@@ -64,21 +89,29 @@
     "# 二分法\n",
     "class Solution:\n",
     "    def mySqrt(self, x: int) -> int:\n",
-    "        left, right = 0, x+1\n",
+    "        left = 0\n",
+    "        right = x + 1 # 加1以避免x為0時無法進入迴圈\n",
     "\n",
     "        while left < right:\n",
-    "            \n",
     "            mid = (left + right) // 2\n",
-    "            sqrt1 = mid ** 2\n",
-    "            \n",
-    "            if (sqrt1 == x):\n",
+    "            print(f\"\\norigin: left = {left}, mid = {mid}, right = {right}\")\n",
+    "            square = mid ** 2\n",
+    "\n",
+    "            if square == x:\n",
+    "                print(f\"(square = {square}) ==  (x = {x})\")\n",
     "                return mid\n",
-    "            elif sqrt1 > x:\n",
-    "                right = mid\n",
-    "            else:\n",
+    "            \n",
+    "            elif square < x:\n",
     "                left = mid + 1\n",
+    "                print(f\"(square = {square}) < (x = {x})\")\n",
+    "                print(f\"new: left = {left}, mid = {mid}, right = {right}\")\n",
+    "\n",
+    "            else:\n",
+    "                right = mid\n",
+    "                print(f\"(square = {square}) > (x = {x})\")\n",
+    "                print(f\"new: left = {left}, mid = {mid}, right = {right}\")\n",
     "        \n",
-    "        return left - 1 \n",
+    "        return left - 1 # 跳出迴圈前會先加1，要返回當下那輪的left\n",
     "        \n",
     "\n",
     "Solution().mySqrt(36)"
