--- a/5. Longest Palindromic Substring.ipynb
+++ b/5. Longest Palindromic Substring.ipynb
@@ -20,16 +20,16 @@
     "        for i in range(n):\n",
     "            print(f\"{'-'*100}\\ni = {i}\")\n",
     "            \n",
-    "            print(\"\\n<< es >>\")\n",
-    "            es = self.find(s, n, left = i, right = i+1)\n",
-    "            print(\"\\n<< os >>\")\n",
-    "            os = self.find(s, n, left = i, right = i+2)\n",
+    "            print(\"\\n<< even >>\") # \"aa\"\n",
+    "            even = self.find(s, n, left = i, right = i+1)\n",
+    "            print(\"\\n<< odd >>\") # \"aba\"\n",
+    "            odd = self.find(s, n, left = i, right = i+2)\n",
     "\n",
-    "            print(f\"\\nres = {res}, es = {es}, os = {os}\")\n",
-    "            if len(es) > len(res):\n",
-    "                res = es\n",
-    "            if len(os) > len(res):\n",
-    "                res = os\n",
+    "            print(f\"\\nres = {res}, even = {even}, odd = {odd}\")\n",
+    "            if len(even) > len(res):\n",
+    "                res = even\n",
+    "            if len(odd) > len(res):\n",
+    "                res = odd\n",
     "            print(f\"new: res = {res}\")\n",
     "        \n",
     "        return res\n",
@@ -57,75 +57,75 @@
       "----------------------------------------------------------------------------------------------------\n",
       "i = 0\n",
       "\n",
-      "<< es >>\n",
+      "<< even >>\n",
       "((left=0) >= 0) and  ((right=1) < (n=7)) and ((s[left]=s[0]=b) == (s[right]=s[1]=b))\n",
       "s[left+1:right] = s[-1+1:2] = s[0:2] = bb\n",
       "\n",
-      "<< os >>\n",
+      "<< odd >>\n",
       "\n",
-      "res = b, es = bb, os = b\n",
+      "res = b, even = bb, odd = b\n",
       "new: res = bb\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i = 1\n",
       "\n",
-      "<< es >>\n",
+      "<< even >>\n",
       "\n",
-      "<< os >>\n",
+      "<< odd >>\n",
       "\n",
-      "res = bb, es = , os = c\n",
+      "res = bb, even = , odd = c\n",
       "new: res = bb\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i = 2\n",
       "\n",
-      "<< es >>\n",
+      "<< even >>\n",
       "((left=2) >= 0) and  ((right=3) < (n=7)) and ((s[left]=s[2]=c) == (s[right]=s[3]=c))\n",
       "s[left+1:right] = s[1+1:4] = s[2:4] = cc\n",
       "\n",
-      "<< os >>\n",
+      "<< odd >>\n",
       "((left=2) >= 0) and  ((right=4) < (n=7)) and ((s[left]=s[2]=c) == (s[right]=s[4]=c))\n",
       "s[left+1:right] = s[1+1:5] = s[2:5] = ccc\n",
       "((left=1) >= 0) and  ((right=5) < (n=7)) and ((s[left]=s[1]=b) == (s[right]=s[5]=b))\n",
       "s[left+1:right] = s[0+1:6] = s[1:6] = bcccb\n",
       "\n",
-      "res = bb, es = cc, os = bcccb\n",
+      "res = bb, even = cc, odd = bcccb\n",
       "new: res = bcccb\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i = 3\n",
       "\n",
-      "<< es >>\n",
+      "<< even >>\n",
       "((left=3) >= 0) and  ((right=4) < (n=7)) and ((s[left]=s[3]=c) == (s[right]=s[4]=c))\n",
       "s[left+1:right] = s[2+1:5] = s[3:5] = cc\n",
       "\n",
-      "<< os >>\n",
+      "<< odd >>\n",
       "\n",
-      "res = bcccb, es = cc, os = c\n",
+      "res = bcccb, even = cc, odd = c\n",
       "new: res = bcccb\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i = 4\n",
       "\n",
-      "<< es >>\n",
+      "<< even >>\n",
       "\n",
-      "<< os >>\n",
+      "<< odd >>\n",
       "\n",
-      "res = bcccb, es = , os = b\n",
+      "res = bcccb, even = , odd = b\n",
       "new: res = bcccb\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i = 5\n",
       "\n",
-      "<< es >>\n",
+      "<< even >>\n",
       "\n",
-      "<< os >>\n",
+      "<< odd >>\n",
       "\n",
-      "res = bcccb, es = , os = a\n",
+      "res = bcccb, even = , odd = a\n",
       "new: res = bcccb\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i = 6\n",
       "\n",
-      "<< es >>\n",
+      "<< even >>\n",
       "\n",
-      "<< os >>\n",
+      "<< odd >>\n",
       "\n",
-      "res = bcccb, es = , os = \n",
+      "res = bcccb, even = , odd = \n",
       "new: res = bcccb\n"
      ]
     },
@@ -145,6 +145,13 @@
     "s = \"bbcccba\"\n",
     "Solution().longestPalindrome(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
