--- a/5. Longest Palindromic Substring.ipynb
+++ b/5. Longest Palindromic Substring.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 雙指針"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -147,11 +154,125 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 動態規劃  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def longestPalindrome(self, s: str) -> str:\n",
+    "        import numpy as np\n",
+    "        n = len(s)\n",
+    "        dp = [[False] * n for _ in range(n)]\n",
+    "        for i in range(n):\n",
+    "            dp[i][i] = True\n",
+    "        print(f\"orginal: dp = \\n{np.array(dp)}\")\n",
+    "\n",
+    "        res = s[0]\n",
+    "        for i in range(n-2, -1, -1):\n",
+    "            for j in range(i+1, n):\n",
+    "                print(f\"\\ni = {i}, j = {j}\")\n",
+    "                if (s[i] == s[j]):\n",
+    "                    if ((j - i) == 1) or (dp[i+1][j-1]):\n",
+    "                        print(f\"( (s[i] = {s[i]}) == (s[j] = {s[j]}) ) and ( ((j - i = {j - i}) == 1) or (dp[i+1][j-1] = {dp[i+1][j-1]}) )\")\n",
+    "                        dp[i][j] = True\n",
+    "                        print(f\"new: dp = \\n{np.array(dp)}\")\n",
+    "\n",
+    "                        if (j - i + 1) > len(res):\n",
+    "                            res = s[i : j+1]\n",
+    "\n",
+    "                        print(f\"(j - i + 1) = {j - i + 1}, res = {res}\")\n",
+    "                    else:\n",
+    "                        print(f\"only - ( (s[i] = {s[i]}) == (s[j] = {s[j]})\")\n",
+    "                else:\n",
+    "                    print(f\"(s[i] = {s[i]}) != (s[j] = {s[j]})\")\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "orginal: dp = \n",
+      "[[ True False False False False]\n",
+      " [False  True False False False]\n",
+      " [False False  True False False]\n",
+      " [False False False  True False]\n",
+      " [False False False False  True]]\n",
+      "\n",
+      "i = 3, j = 4\n",
+      "(s[i] = a) != (s[j] = d)\n",
+      "\n",
+      "i = 2, j = 3\n",
+      "(s[i] = b) != (s[j] = a)\n",
+      "\n",
+      "i = 2, j = 4\n",
+      "(s[i] = b) != (s[j] = d)\n",
+      "\n",
+      "i = 1, j = 2\n",
+      "(s[i] = a) != (s[j] = b)\n",
+      "\n",
+      "i = 1, j = 3\n",
+      "( (s[i] = a) == (s[j] = a) ) and ( ((j - i = 2) == 1) or (dp[i+1][j-1] = True) )\n",
+      "new: dp = \n",
+      "[[ True False False False False]\n",
+      " [False  True False  True False]\n",
+      " [False False  True False False]\n",
+      " [False False False  True False]\n",
+      " [False False False False  True]]\n",
+      "(j - i + 1) = 3, res = aba\n",
+      "\n",
+      "i = 1, j = 4\n",
+      "(s[i] = a) != (s[j] = d)\n",
+      "\n",
+      "i = 0, j = 1\n",
+      "(s[i] = b) != (s[j] = a)\n",
+      "\n",
+      "i = 0, j = 2\n",
+      "( (s[i] = b) == (s[j] = b) ) and ( ((j - i = 2) == 1) or (dp[i+1][j-1] = True) )\n",
+      "new: dp = \n",
+      "[[ True False  True False False]\n",
+      " [False  True False  True False]\n",
+      " [False False  True False False]\n",
+      " [False False False  True False]\n",
+      " [False False False False  True]]\n",
+      "(j - i + 1) = 3, res = aba\n",
+      "\n",
+      "i = 0, j = 3\n",
+      "(s[i] = b) != (s[j] = a)\n",
+      "\n",
+      "i = 0, j = 4\n",
+      "(s[i] = b) != (s[j] = d)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'aba'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"babad\"\n",
+    "Solution().longestPalindrome(s)"
+   ]
   }
  ],
  "metadata": {
