--- a/5. Longest Palindromic Substring.ipynb
+++ b/5. Longest Palindromic Substring.ipynb
@@ -154,10 +154,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 動態規劃  "
+    "#### 動態規劃\n",
+    "https://clay-atlas.com/blog/2021/01/03/leetcode-cn-5-longest-palindromic-substring/"
    ]
   },
   {
@@ -172,7 +174,7 @@
     "        n = len(s)\n",
     "        dp = [[False] * n for _ in range(n)]\n",
     "        for i in range(n):\n",
-    "            dp[i][i] = True\n",
+    "            dp[i][i] = True # 單一字一定是回文，對角線為True\n",
     "        print(f\"orginal: dp = \\n{np.array(dp)}\")\n",
     "\n",
     "        res = s[0]\n",
@@ -181,6 +183,8 @@
     "                print(f\"\\ni = {i}, j = {j}\")\n",
     "                if (s[i] == s[j]):\n",
     "                    if ((j - i) == 1) or (dp[i+1][j-1]):\n",
+    "                        # (j - i) == 1, ex: \"aa\", \"cc\", 間隔為1，前後相同的字一定為回文\n",
+    "                        # dp[i+1][j-1],ex: \"aba\", \"cdc\"\n",
     "                        print(f\"( (s[i] = {s[i]}) == (s[j] = {s[j]}) ) and ( ((j - i = {j - i}) == 1) or (dp[i+1][j-1] = {dp[i+1][j-1]}) )\")\n",
     "                        dp[i][j] = True\n",
     "                        print(f\"new: dp = \\n{np.array(dp)}\")\n",
