--- a/5. Longest Palindromic Substring.ipynb
+++ b/5. Longest Palindromic Substring.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "                        print(f\"(j - i + 1) = {j - i + 1}, res = {res}\")\n",
     "                    else:\n",
-    "                        print(f\"only - ( (s[i] = {s[i]}) == (s[j] = {s[j]})\")\n",
+    "                        print(f\"only - (s[i] = {s[i]}) == (s[j] = {s[j]})\")\n",
     "                else:\n",
     "                    print(f\"(s[i] = {s[i]}) != (s[j] = {s[j]})\")\n",
     "        \n",
